--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,7 @@
 chromadb==0.6.3
 langchain_community==0.3.18
 pymupdf==1.23.6
+pypdf==5.3.0  # Added PyPDF for stable PDF loading
 sentence-transformers==3.4.1
 aiohttp==3.11.13
 altair==5.5.0
@@ -44,7 +45,6 @@ pyasn1==0.6.1
 pydantic==2.10.6
 pydeck==0.9.1
 Pygments==2.19.1
-pypdf==5.3.0
 python-dateutil==2.9.0.post0
 pytz==2025.1
 PyYAML==6.0.2
