--- a/requirements.txt
+++ b/requirements.txt
@@ -1,67 +1,151 @@
-chromadb==0.6.3
-langchain_community==0.3.18
-pymupdf==1.23.6
-pypdf==5.3.0  # Added PyPDF for stable PDF loading
-sentence-transformers==3.4.1
-aiohttp==3.11.13
-altair==5.5.0
-annotated-types==0.7.0
-anyio==4.8.0
-attrs==25.1.0
-bcrypt==4.2.1
-blinker==1.9.0
-cachetools==5.5.2
-certifi==2025.1.31
-charset-normalizer==3.4.1
-fastapi==0.115.8
-filelock==3.17.0
-flatbuffers==25.2.10
-frozenlist==1.5.0
-fsspec==2025.2.0
-gitdb==4.0.12
-GitPython==3.1.44
-google-auth==2.38.0
-greenlet==3.1.1
-groq==0.18.0
-grpcio==1.70.0
-h11==0.14.0
-httpcore==1.0.7
-httptools==0.6.4
-httpx==0.28.1
-huggingface-hub==0.29.1
-idna==3.10
-Jinja2==3.1.5
-joblib==1.4.2
-markdown-it-py==3.0.0
-MarkupSafe==3.0.2
-mpmath==1.3.0
-networkx==3.4.2
-numpy==2.2.3
-pandas==2.2.3
-pillow==11.1.0
-protobuf==5.29.3
-pyarrow==19.0.1
-pyasn1==0.6.1
-pydantic==2.10.6
-pydeck==0.9.1
-Pygments==2.19.1
-python-dateutil==2.9.0.post0
-pytz==2025.1
-PyYAML==6.0.2
-requests==2.32.3
-rich==13.9.4
-scikit-learn==1.6.1
-scipy==1.15.2
-setuptools==75.8.2
-streamlit==1.42.2
-tenacity==9.0.0
-threadpoolctl==3.5.0
-tornado==6.4.2
-tqdm==4.67.1
-transformers==4.49.0
-typing-extensions==4.12.2
-urllib3==2.3.0
-uvicorn==0.34.0
-watchdog==6.0.0
-websockets==15.0
+aiohappyeyeballs
+aiohttp
+aiosignal
+altair
+annotated-types
+anyio
+asgiref
+attrs
+backoff
+bcrypt
+blinker
+build
+cachetools
+certifi
+charset-normalizer
+chroma-hnswlib
+chromadb
+click
+colorama
+coloredlogs
+dataclasses-json
+Deprecated
+distro
+durationpy
+fastapi
+filelock
+flatbuffers
+frozenlist
+fsspec
+gitdb
+GitPython
+google-auth
+googleapis-common-protos
+greenlet
+groq
+grpcio
+h11
+httpcore
+httptools
+httpx
+httpx-sse
+huggingface-hub
+humanfriendly
+idna
+importlib_metadata
+importlib_resources
+Jinja2
+joblib
+jsonpatch
+jsonpointer
+jsonschema
+jsonschema-specifications
+kubernetes
+langchain
+langchain-community
+langchain-core
+langchain_groq
+langchain-text-splitters
+langsmith
+markdown-it-py
+MarkupSafe
+marshmallow
+mdurl
+mmh3
+monotonic
+mpmath
+multidict
+mypy-extensions
+narwhals
+networkx
+numpy
+oauthlib
+onnxruntime
+opentelemetry-api
+opentelemetry-exporter-otlp-proto-common
+opentelemetry-exporter-otlp-proto-grpc
+opentelemetry-instrumentation
+opentelemetry-instrumentation-asgi
+opentelemetry-instrumentation-fastapi
+opentelemetry-proto
+opentelemetry-sdk
+opentelemetry-semantic-conventions
+opentelemetry-util-http
+orjson
+overrides
+packaging
+pandas
+pillow
+posthog
+propcache
+protobuf
+pyarrow
+pyasn1
+pyasn1_modules
+pydantic
+pydantic-settings
+pydantic_core
+pydeck
+Pygments
+pypdf
+PyPika
+pyproject_hooks
+pyreadline3
+python-dateutil
+python-dotenv
+pytz
+PyYAML
+referencing
+regex
+requests
+requests-oauthlib
+requests-toolbelt
+rich
+rpds-py
+rsa
+safetensors
+scikit-learn
+scipy
+sentence-transformers
+setuptools
+shellingham
+six
+smmap
+sniffio
+SQLAlchemy
+starlette
+streamlit
+sympy
+tenacity
+threadpoolctl
+tokenizers
+toml
+torch
+tornado
+tqdm
+transformers
+typer
+typing-inspect
+typing_extensions
+tzdata
+urllib3
+uvicorn
+watchdog
+watchfiles
+websocket-client
+websockets
+wrapt
+yarl
+zipp
+zstandard
 langchain_groq
